####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = gnomemenus

## INCLUDES were found outside kdevelop specific part

gnomemenus_SOURCES = list.cpp main.cpp 
gnomemenus_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp list.cpp list.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
gnomemenus_LDFLAGS = $(all_libraries) 
                                                                                
